@@ -1,7 +1,3 @@
-<p>
-  Prestige when max enemy level reach "Max Level" or when the time elapsed in
-  this prestige reach "hh mm"
-</p>
 <form nz-form nzLayout="inline">
   <nz-form-item>
     <nz-form-label>On</nz-form-label>
