@@ -9,3 +9,6 @@ nz-card {
 .auto-description {
   max-width: 400px;
 }
+.info-icon {
+  opacity: 80%;
+}
